unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/zkfedex__ShipmentPackage__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkfedex__shipmentPackageHelp</customHelpPage>
    <description>Shipment Package is a junction object allowing a many-to-many relationship between Shipments and Packages.</description>
    <label>FedEx Shipment Package</label>
    <nameField>
        <displayFormat>ShipmentPackage-{0000000000}</displayFormat>
        <label>Shipment Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Shipment Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>