unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__AdditionalTrackingNumbers__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AdditionalTrackingNumbers__c</fullName>
    <label>Additional Tracking Numbers</label>
    <type>TextArea</type>
</CustomField>