unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__DeletedFromShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DeletedFromShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the package that was submitted for this shipment was deleted from the shipping carrier, using the 'Modify Shipment' utility.</description>
    <inlineHelpText>Indicates whether the package that was submitted for this shipment was deleted from the shipping carrier, using the 'Modify Shipment' utility.</inlineHelpText>
    <label>Deleted from Shipment</label>
    <type>Checkbox</type>
</CustomField>