unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__Delivered__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>