unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__Package__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Package__c</fullName>
    <label>Package</label>
    <referenceTo>zkfedex__Package__c</referenceTo>
    <relationshipName>R00N30000002dhRUEAY</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>