unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>zkfedex__Shipment__c</referenceTo>
    <relationshipName>R00N30000002dhRPEAY</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>