unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__SsElectronicCod__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsElectronicCod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C.O.D.</label>
    <type>Checkbox</type>
</CustomField>