unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__SsSignatureOption__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsSignatureOption__c</fullName>
    <label>Signature Options</label>
    <length>25</length>
    <type>Text</type>
</CustomField>