unpackaged/main/default/objects/zkfedex__ShipmentPackage__c/fields/zkfedex__StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__StatusDescription__c</fullName>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>